fixed display issue on mobile
Former-commit-id: ec0f1575448ca95a2476b43802b9004ee9dbda1f

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1916,6 +1916,9 @@
 
 	@media screen and (min-width: 737px) and (max-width: 1200px) {
 
+        #homage{
+            padding-top: 3em;
+        }
 		/* Basic */
 
 			body {
@@ -1961,7 +1964,10 @@
 /* Mobile */
 
 	@media screen and (max-width: 736px) {
-
+        #homage{
+            padding-top: 3em;
+        }
+        
 		/* Basic */
 
 			body, input, textarea, select {
